# kube-rabbitmq-transmitter

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.yaml  config.yaml.example  docker-compose.yaml
.claude/: settings.local.json
src/: lib.rs  main.rs
src/config/: mod.rs
src/handlers/: health.rs  mod.rs  webhook.rs
src/mocks/: auth_service.rs  http_client.rs  mod.rs
src/models/: mod.rs
src/providers/: logging.rs  mod.rs  rabbitmq_consumer.rs
src/services/: auth.rs  http_client.rs  message_processor.rs  mod.rs
src/utils/: error.rs
tests/: test_logging.rs
tests/integration/: end_to_end_tests.rs  mod.rs
tests/unit/: auth_service_tests.rs  http_client_tests.rs  message_processor_tests.rs  mod.rs
