[package]
name = "rabbitmq-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
lapin = "2.5"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
config = "0.14"
futures = "0.3"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
wiremock = "0.6"
http = "1.0"
tempfile = "3.0"
